; ModuleID = '/home/carl/AnghaBench/radare2/libr/util/extr_bdiff.c_recurse.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/util/extr_bdiff.c_recurse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.line = type { i32 }
%struct.pos = type { i32 }
%struct.hunklist = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.line*, %struct.line*, %struct.pos*, i32, i32, i32, i32, %struct.hunklist*)* @recurse to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @recurse(%struct.line* %0, %struct.line* %1, %struct.pos* %2, i32 %3, i32 %4, i32 %5, i32 %6, %struct.hunklist* %7) #0 {
  %9 = alloca %struct.line*, align 8
  %10 = alloca %struct.line*, align 8
  %11 = alloca %struct.pos*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca %struct.hunklist*, align 8
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  store %struct.line* %0, %struct.line** %9, align 8
  store %struct.line* %1, %struct.line** %10, align 8
  store %struct.pos* %2, %struct.pos** %11, align 8
  store i32 %3, i32* %12, align 4
  store i32 %4, i32* %13, align 4
  store i32 %5, i32* %14, align 4
  store i32 %6, i32* %15, align 4
  store %struct.hunklist* %7, %struct.hunklist** %16, align 8
  %20 = load %struct.line*, %struct.line** %9, align 8
  %21 = load %struct.line*, %struct.line** %10, align 8
  %22 = load %struct.pos*, %struct.pos** %11, align 8
  %23 = load i32, i32* %12, align 4
  %24 = load i32, i32* %13, align 4
  %25 = load i32, i32* %14, align 4
  %26 = load i32, i32* %15, align 4
  %27 = call i32 @longest_match(%struct.line* %20, %struct.line* %21, %struct.pos* %22, i32 %23, i32 %24, i32 %25, i32 %26, i32* %17, i32* %18)
  store i32 %27, i32* %19, align 4
  %28 = load i32, i32* %19, align 4
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %31, label %30

30:                                               ; preds = %8
  br label %80

31:                                               ; preds = %8
  %32 = load %struct.line*, %struct.line** %9, align 8
  %33 = load %struct.line*, %struct.line** %10, align 8
  %34 = load %struct.pos*, %struct.pos** %11, align 8
  %35 = load i32, i32* %12, align 4
  %36 = load i32, i32* %17, align 4
  %37 = load i32, i32* %14, align 4
  %38 = load i32, i32* %18, align 4
  %39 = load %struct.hunklist*, %struct.hunklist** %16, align 8
  call void @recurse(%struct.line* %32, %struct.line* %33, %struct.pos* %34, i32 %35, i32 %36, i32 %37, i32 %38, %struct.hunklist* %39)
  %40 = load i32, i32* %17, align 4
  %41 = load %struct.hunklist*, %struct.hunklist** %16, align 8
  %42 = getelementptr inbounds %struct.hunklist, %struct.hunklist* %41, i32 0, i32 0
  %43 = load %struct.TYPE_2__*, %struct.TYPE_2__** %42, align 8
  %44 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %43, i32 0, i32 0
  store i32 %40, i32* %44, align 4
  %45 = load i32, i32* %17, align 4
  %46 = load i32, i32* %19, align 4
  %47 = add nsw i32 %45, %46
  %48 = load %struct.hunklist*, %struct.hunklist** %16, align 8
  %49 = getelementptr inbounds %struct.hunklist, %struct.hunklist* %48, i32 0, i32 0
  %50 = load %struct.TYPE_2__*, %struct.TYPE_2__** %49, align 8
  %51 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %50, i32 0, i32 1
  store i32 %47, i32* %51, align 4
  %52 = load i32, i32* %18, align 4
  %53 = load %struct.hunklist*, %struct.hunklist** %16, align 8
  %54 = getelementptr inbounds %struct.hunklist, %struct.hunklist* %53, i32 0, i32 0
  %55 = load %struct.TYPE_2__*, %struct.TYPE_2__** %54, align 8
  %56 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %55, i32 0, i32 2
  store i32 %52, i32* %56, align 4
  %57 = load i32, i32* %18, align 4
  %58 = load i32, i32* %19, align 4
  %59 = add nsw i32 %57, %58
  %60 = load %struct.hunklist*, %struct.hunklist** %16, align 8
  %61 = getelementptr inbounds %struct.hunklist, %struct.hunklist* %60, i32 0, i32 0
  %62 = load %struct.TYPE_2__*, %struct.TYPE_2__** %61, align 8
  %63 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %62, i32 0, i32 3
  store i32 %59, i32* %63, align 4
  %64 = load %struct.hunklist*, %struct.hunklist** %16, align 8
  %65 = getelementptr inbounds %struct.hunklist, %struct.hunklist* %64, i32 0, i32 0
  %66 = load %struct.TYPE_2__*, %struct.TYPE_2__** %65, align 8
  %67 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %66, i32 1
  store %struct.TYPE_2__* %67, %struct.TYPE_2__** %65, align 8
  %68 = load %struct.line*, %struct.line** %9, align 8
  %69 = load %struct.line*, %struct.line** %10, align 8
  %70 = load %struct.pos*, %struct.pos** %11, align 8
  %71 = load i32, i32* %17, align 4
  %72 = load i32, i32* %19, align 4
  %73 = add nsw i32 %71, %72
  %74 = load i32, i32* %13, align 4
  %75 = load i32, i32* %18, align 4
  %76 = load i32, i32* %19, align 4
  %77 = add nsw i32 %75, %76
  %78 = load i32, i32* %15, align 4
  %79 = load %struct.hunklist*, %struct.hunklist** %16, align 8
  call void @recurse(%struct.line* %68, %struct.line* %69, %struct.pos* %70, i32 %73, i32 %74, i32 %77, i32 %78, %struct.hunklist* %79)
  br label %80

80:                                               ; preds = %31, %30
  ret void
}

declare dso_local i32 @longest_match(%struct.line*, %struct.line*, %struct.pos*, i32, i32, i32, i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
